<resources>
    <string name="app_name">Nmedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="title" translatable="false">Нетология. Университет интернет-профессий</string>
    <string name="published" translatable="false">21 мая в 18:36</string>
    <string name="content" translatable="false">Привет, это новая Нетология! Когда-то Нетология начиналась в интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растём сами и помогаем расти студентам: от новичков до уверенных профессионалов. Но самое важное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия - помочь встать на путь роста и начать цепочку перемен → http://netolo.gy/fyb</string>
    <string name="likes" translatable="false">10</string>
    <string name="shares" translatable="false">5</string>
    <string name="views" translatable="false">5</string>
    <string name="menu">Menu</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="post_text">Post text</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="edit_post">Edit post</string>
    <string name="add_post">Add post</string>
    <string name="save">Save</string>
    <string name="play">Play</string>
    <string name="chooser_share_post">Share post</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_unsupported">Unsupported action</string>
    <string name="notification_new_post">User %1$s created new post</string>
</resources>