<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:paddingBottom="@dimen/common_spacing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_netology"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/title"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="packed"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="17dp" />

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:paddingBottom="@dimen/common_spacing"
        android:text="@string/published"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:layout_editor_absoluteX="110dp"
        tools:layout_editor_absoluteY="44dp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        style="@style/Widget.AppTheme.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:contentDescription="@string/menu"
        app:icon="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="62dp" />

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:autoLink="web"
        android:paddingBottom="@dimen/common_spacing"
        android:text="@string/content"
        app:layout_constraintTop_toBottomOf="@id/avatar"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/postBottomBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="video, play"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="247dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/likes"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:checkable="true"
        android:contentDescription="@string/like"
        app:icon="@drawable/ic_baseline_favorite_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postBottomBarrier"
        tools:text="100" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shares"
        style="@style/Widget.AppTheme.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:contentDescription="@string/share"
        app:icon="@drawable/ic_baseline_share_24"
        app:layout_constraintStart_toEndOf="@id/likes"
        app:layout_constraintTop_toBottomOf="@id/postBottomBarrier"
        tools:text="1000" />


    <ImageView
        android:id="@+id/views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/small_spacing"
        app:layout_constraintEnd_toStartOf="@+id/viewsCount"
        app:layout_constraintTop_toBottomOf="@+id/postBottomBarrier"
        app:srcCompat="@drawable/ic_baseline_visibility_24" />

    <TextView
        android:id="@+id/viewsCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_spacing"
        android:text="@string/views"
        app:layout_constraintBottom_toBottomOf="@+id/views"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/views" />

    <ImageView
        android:id="@+id/video"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="281dp"
        app:srcCompat="@drawable/ic_baseline_video_128" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing"
        app:layout_constraintStart_toStartOf="@id/video"
        app:layout_constraintEnd_toEndOf="@id/video"
        app:layout_constraintTop_toTopOf="@id/video"
        app:layout_constraintBottom_toBottomOf="@id/video"
        android:alpha="0.5"
        app:srcCompat="@drawable/ic_baseline_play_arrow_24"
        android:contentDescription="@string/play"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/videoGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="video,play" />

</androidx.constraintlayout.widget.ConstraintLayout>